--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
+    <div class="bg"></div>
     <div class="content">
-
         <div class="img-cover">
             <img src="https://pbs.twimg.com/profile_images/1685656894147530752/8cRz50_e_400x400.jpg">
         </div>
         <h1>いるかぁぁ</h1>
+        <p class="discription">主にYMMについて語ってます。<br>最近はプラグインや機能面が進化しすぎててついていけてないのが悩みです。</p>
+        <h2>個人的なやつ</h2>
         <div class="card-container">
             <a href="https://twitter.com/dolphin__kun" target="_blank" class="card">
                 <div class="icon">
@@ -23,7 +25,7 @@
                 </div>
                 <div class="card-content">
                     <h3>X (旧Twitter)</h3>
-                    <p>なんかいろいろつぶやいてます</p>
+                    <p>自分用アカウントです</p>
                 </div>
             </a>
             <a href="https://www.youtube.com/@Dolphin_yukkuri" target="_blank" class="card">
@@ -35,8 +37,48 @@
                     <p>なんかいろやってます</p>
                 </div>
             </a>
+            <a href="https://discord.gg/QKh8HaFxxd" target="_blank" class="card">
+                <div class="icon">
+                    <img src="https://cdn.discordapp.com/icons/984717440334315610/a8f2e74b101ebca7d697956a6c7605ef.png">
+                </div>
+                <div class="card-content">
+                    <h3>Discordの自鯖</h3>
+                    <p>あんまり活発ではないけど...毎日見てはいるよ！</p>
+                </div>
+            </a>
         </div>
-
+        <h2>Discordコミュニティー</h2>
+        <div class="card-container">
+            <a href="https://discord.gg/6kKRZ7KpHu" target="_blank" class="card">
+                <div class="icon">
+                    <img src="https://cdn.discordapp.com/icons/809420891968634911/f294ce6248ebdbdf70319f4703f9006c.png">
+                </div>
+                <div class="card-content">
+                    <h3>実況者のたまり場</h3>
+                    <p>けっこう大きな実況者コミュニティー</p>
+                </div>
+            </a>
+            <a href="https://discord.gg/ebCbRCkNAT" target="_blank" class="card">
+                <div class="icon">
+                    <img
+                        src="https://cdn.discordapp.com/icons/1232145636367798326/8416d17aac118bc516c2e0dfdcd7993d.png">
+                </div>
+                <div class="card-content">
+                    <h3>YMM4情報共有鯖</h3>
+                    <p>YMMの非公式コミュニティーサーバー<br>饅頭遣いさんがいらっしゃる(すごい！)</p>
+                </div>
+            </a>
+            <a href="https://discord.gg/8Qr77NzQpf" target="_blank" class="card">
+                <div class="icon">
+                    <img
+                        src="https://cdn.discordapp.com/icons/1287648182234513502/b22d2881699a5107783f974fc5c6d1f9.png">
+                </div>
+                <div class="card-content">
+                    <h3>創作例会</h3>
+                    <p>創作例会というイベントのサーバー<br>毎月開催してるからぜひきてね！！！</p>
+                </div>
+            </a>
+        </div>
     </div>
 </body>
 
