--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SNS Link</title>
+    <title>いるかぁぁのリンクたち</title>
+    <link rel="icon" href="https://pbs.twimg.com/profile_images/1685656894147530752/8cRz50_e_400x400.jpg">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ffd65a7758.js" crossorigin="anonymous"></script>
 </head>
