--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                     <p>なんかいろやってます</p>
                 </div>
             </a>
+            <a href="https://github.com/Dolphin-kun" target="_blank" class="card">
+                <div class="icon">
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <div class="card-content">
+                    <h3>Github</h3>
+                    <p>とりあえずリポジトリ化してる</p>
+                </div>
+            </a>
             <a href="https://discord.gg/QKh8HaFxxd" target="_blank" class="card">
                 <div class="icon">
                     <img src="https://cdn.discordapp.com/icons/984717440334315610/a8f2e74b101ebca7d697956a6c7605ef.png">
@@ -62,21 +71,24 @@
             <a href="https://discord.gg/ebCbRCkNAT" target="_blank" class="card">
                 <div class="icon">
                     <img
-                        src="https://cdn.discordapp.com/icons/1232145636367798326/8416d17aac118bc516c2e0dfdcd7993d.png">
+                        src="https://cdn.discordapp.com/icons/1232145636367798326/a_70dca1ed30c763003766f9a63b49c605.gif">
                 </div>
                 <div class="card-content">
                     <h3>YMM4情報共有鯖</h3>
                     <p>YMMの非公式コミュニティーサーバー<br>饅頭遣いさんがいらっしゃる(すごい！)</p>
                 </div>
             </a>
-            <a href="https://discord.gg/8Qr77NzQpf" target="_blank" class="card">
+        </div>
+
+        <h2>YMM4系</h2>
+        <div class="card-container">
+            <a href="https://ymm4-info.net/" target="_blank" class="card">
                 <div class="icon">
-                    <img
-                        src="https://cdn.discordapp.com/icons/1287648182234513502/b22d2881699a5107783f974fc5c6d1f9.png">
+                    <img src="https://ymm4-info.net/site_icon.png">
                 </div>
                 <div class="card-content">
-                    <h3>創作例会</h3>
-                    <p>創作例会というイベントのサーバー<br>毎月開催してるからぜひきてね！！！</p>
+                    <h3>YMM4情報サイト</h3>
+                    <p>YMM4についてまとめているサイトです。<br>プラグインのDLもこちらから。</p>
                 </div>
             </a>
         </div>
